switch from sqlite to supabase

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# Copy this file to `.env` and set your database URL
-DATABASE_URL=
+# Supabase Postgres connection string
+DATABASE_URL=postgresql+psycopg://postgres:YOUR_PASSWORD@db.YOUR_PROJECT.supabase.co:5432/postgres?sslmode=require
