--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,8 @@ services:
     build: .
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     environment:
-      - DATABASE_URL=sqlite:////data/booking.db
-    volumes:
-      - db-data:/data
-volumes:
-  db-data:
+      DATABASE_URL: ${DATABASE_URL}
+
